# mwatch

./: README.md  pyproject.toml
mwatch/: app.py  main.py  slot.py  watcher.py
tests/: test_mwatch.py
