[tool.poetry]
name = "mwatch"
version = "0.9.2"
description = ""
authors = ["JD <jeandamien.brossillon@gmail.com>"]

[tool.poetry.scripts]
mwatch = 'mwatch.main:main'

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
